--- a/product.html
+++ b/product.html
@@ -19,8 +19,8 @@
     <div class="logo">ElectronicsZone</div>
     <div class="icons">
       <div class="bx bx-heart" id="heart-icon"></div>
-      <a href="#" class="bx bx-cart" id="cart-link"><span id="cart-count">0</span></a>
-      <a href="search.html" class="bx bx-search-alt-2" id="search-icon"></a>
+    <div href="#" class="bx bx-cart" id="cart-link"><span id="cart-count">0</span></div>
+      <div href="search.html" class="bx bx-search-alt-2" id="search-icon"></div>
     </div>
     <div class="hamburger">
       <span></span>
