some work in search

--- a/website.html
+++ b/website.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+  <div id="Backtotop">
+  </div>
   <!-- Navbar -->
   <nav class="navbar">
     <!-- Toggle Button -->
@@ -22,7 +24,7 @@
     <div class="icons">
       <div class="bx bx-heart" id="heart-icon"></div>
       <div class="bx bx-cart" id="cart-link"><span id="cart-count">0</span></div>
-      <div class="bx bx-search-alt-2" id="search-icon"></div>
+      <div class="bx bx-search-alt-2" id="search-icon"><input id="filterinput" type="text"></div>
     </div>
     <div class="hamburger">
       <span></span>
@@ -54,6 +56,74 @@
          <button id="checkout">Checkout</button>
      </div>
    </div>
+
+
+
+
+   <!-- footer -->
+
+
+  <div class="navFooterBackToTopText">
+    <a href="#Backtotop">Back to top</a>
+  </div>
+
+  <div class="footer">
+
+    <div id="footer-widgets">
+      <div class="footer-sidebar footer-1">
+        <h4 class="widget-title">QUICK LINKS</h4>
+        <a href="https://fruitsabzi.pk/deals-of-the-day/">Deals of the day</a>
+        <a href="https://fruitsabzi.pk/product-category/bundle/">Bundles</a>
+        <a href="#dryfruit">Dry Fruits</a>
+        <a href="#chocolates">Chocolates</a>
+        <a href="https://fruitsabzi.pk/product-category/dairy/">Dairy</a>
+        <a href="">Meat</a>
+        <box-icon name='phone'></box-icon>
+        <a href="https://wa.me/923181011811">
+          <i class="bx bx-phone"></i>
+
+          <span class="num">+92 318 1011811</span>
+        </a>
+      </div>
+    </div>
+
+    <div class="footer-sidebar footer-2">
+      <div id="nav_menu-2">
+        <h4 class="widget-title">FruitSabzi</h4>
+        <a href="">Term & Conditions</a>
+
+        <input type="email" name="EMAIL" class="Search" placeholder="Email Address" required="">
+        <input type="submit" class="submit" value="Subscribe">
+      </div>
+      <div class="social">
+        <a href=""><i class='bx bxl-facebook'> </i></a>
+        <a href=""><i class='bx bxl-twitter'> </i></a>
+        <a href=""><i class='bx bxl-instagram'> </i></a>
+        <a href=""><i class='bx bxl-youtube'> </i></a>
+        <a href=""><i class='bx bxl-linkedin'> </i></a>
+      </div>
+
+
+    </div>
+    <div class="footer-sidebar footer-3">
+      <div id="nav_menu-3">
+        <h4 class="widget-title">Reach Us</h4>
+        <a href="about.html">About Us</a>
+        <a href="contect.html">Contact</a>
+
+      </div>
+    </div>
+
+
+
+
+  </div>
+  </div>
+
+
+  <div class="copyright">
+    <p>Copy-Right 2024 Dry-Fruit</p>
+  </div>
    <script src="website.js"></script>
 </body>
 
