--- a/website.html
+++ b/website.html
@@ -24,7 +24,7 @@
     <div class="icons">
       <div class="bx bx-heart" id="heart-icon"></div>
       <div class="bx bx-cart" id="cart-link"><span id="cart-count">0</span></div>
-      <div class="bx bx-search-alt-2" id="search-icon"><input id="filterinput" type="text"></div>
+      <div class="bx bx-search-alt-2" id="search-icon"></div>
     </div>
     <div class="hamburger">
       <span></span>
@@ -43,6 +43,325 @@
     <li><a href="#contact" id="home2">CAMERA</a></li>
     <li><a href="#contact" id="home2">WATCHS</a></li>
   </ul>
+<!-- carousel -->
+<div class="carousel">
+  <div class="list">
+    <div class="items">
+      <img src="ip.png" alt="">
+      <div class="intro">
+        <div class="title">
+         DesignIPhone 
+        </div>
+        <div class="topic">
+          Phone
+        </div>
+        <div class="des">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque itaque laudantium molestiae?
+        </div>
+        <button class="searchMore">
+          see more
+        </button>
+        <div class="speclfication"></div>
+      </div>
+      <div class="detail">
+        <div class="tital">
+          IPHON
+        </div>
+        <div class="des">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint libero odit.
+        </div>
+        <div class="spacifaction">
+          <div>
+            <p>Used Time</p>
+            <p>6 hrs</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+        </div>
+        <div class="checkout">
+          <button>Add to cart</button>
+          <button>checkout</button>
+        </div>
+      </div>
+    </div>
+    <div class="items">
+      <img src="ip.png" alt="">
+      <div class="intro">
+        <div class="title">
+         DesignIPhone 
+        </div>
+        <div class="topic">
+          Phone
+        </div>
+        <div class="des">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque itaque laudantium molestiae?
+        </div>
+        <button class="searchMore">
+          see more
+        </button>
+        <div class="speclfication"></div>
+      </div>
+      <div class="detail">
+        <div class="tital">
+          IPHON
+        </div>
+        <div class="des">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint libero odit.
+        </div>
+        <div class="spacifaction">
+          <div>
+            <p>Used Time</p>
+            <p>6 hrs</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+        </div>
+        <div class="checkout">
+          <button>Add to cart</button>
+          <button>checkout</button>
+        </div>
+      </div>
+    </div>
+    <div class="items">
+      <img src="ip.png" alt="">
+      <div class="intro">
+        <div class="title">
+         DesignIPhone 
+        </div>
+        <div class="topic">
+          Phone
+        </div>
+        <div class="des">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque itaque laudantium molestiae?
+        </div>
+        <button class="searchMore">
+          see more
+        </button>
+        <div class="speclfication"></div>
+      </div>
+      <div class="detail">
+        <div class="tital">
+          IPHON
+        </div>
+        <div class="des">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint libero odit.
+        </div>
+        <div class="spacifaction">
+          <div>
+            <p>Used Time</p>
+            <p>6 hrs</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+        </div>
+        <div class="checkout">
+          <button>Add to cart</button>
+          <button>checkout</button>
+        </div>
+      </div>
+    </div>
+    <div class="items">
+      <img src="ip.png" alt="">
+      <div class="intro">
+        <div class="title">
+         DesignIPhone 
+        </div>
+        <div class="topic">
+          Phone
+        </div>
+        <div class="des">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque itaque laudantium molestiae?
+        </div>
+        <button class="searchMore">
+          see more
+        </button>
+        <div class="speclfication"></div>
+      </div>
+      <div class="detail">
+        <div class="tital">
+          IPHON
+        </div>
+        <div class="des">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint libero odit.
+        </div>
+        <div class="spacifaction">
+          <div>
+            <p>Used Time</p>
+            <p>6 hrs</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+        </div>
+        <div class="checkout">
+          <button>Add to cart</button>
+          <button>checkout</button>
+        </div>
+      </div>
+    </div>
+    <div class="items">
+      <img src="ip.png" alt="">
+      <div class="intro">
+        <div class="title">
+         DesignIPhone 
+        </div>
+        <div class="topic">
+          Phone
+        </div>
+        <div class="des">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque itaque laudantium molestiae?
+        </div>
+        <button class="searchMore">
+          see more
+        </button>
+        <div class="speclfication"></div>
+      </div>
+      <div class="detail">
+        <div class="tital">
+          IPHON
+        </div>
+        <div class="des">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint libero odit.
+        </div>
+        <div class="spacifaction">
+          <div>
+            <p>Used Time</p>
+            <p>6 hrs</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+        </div>
+        <div class="checkout">
+          <button>Add to cart</button>
+          <button>checkout</button>
+        </div>
+      </div>
+    </div>
+    <div class="items">
+      <img src="ip.png" alt="">
+      <div class="intro">
+        <div class="title">
+         DesignIPhone 
+        </div>
+        <div class="topic">
+          Phone
+        </div>
+        <div class="des">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque itaque laudantium molestiae?
+        </div>
+        <button class="searchMore">
+          see more
+        </button>
+        <div class="speclfication"></div>
+      </div>
+      <div class="detail">
+        <div class="tital">
+          IPHON
+        </div>
+        <div class="des">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint libero odit.
+        </div>
+        <div class="spacifaction">
+          <div>
+            <p>Used Time</p>
+            <p>6 hrs</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+          <div>
+            <p>Charging port</p>
+            <p>Type -c</p>
+          </div>
+        </div>
+        <div class="checkout">
+          <button>Add to cart</button>
+          <button>checkout</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
    <!-- Product List -->
    <div id="product-list"></div>
   
@@ -56,74 +375,28 @@
          <button id="checkout">Checkout</button>
      </div>
    </div>
-
-
-
-
-   <!-- footer -->
-
-
-  <div class="navFooterBackToTopText">
-    <a href="#Backtotop">Back to top</a>
-  </div>
-
-  <div class="footer">
-
-    <div id="footer-widgets">
-      <div class="footer-sidebar footer-1">
-        <h4 class="widget-title">QUICK LINKS</h4>
-        <a href="https://fruitsabzi.pk/deals-of-the-day/">Deals of the day</a>
-        <a href="https://fruitsabzi.pk/product-category/bundle/">Bundles</a>
-        <a href="#dryfruit">Dry Fruits</a>
-        <a href="#chocolates">Chocolates</a>
-        <a href="https://fruitsabzi.pk/product-category/dairy/">Dairy</a>
-        <a href="">Meat</a>
-        <box-icon name='phone'></box-icon>
-        <a href="https://wa.me/923181011811">
-          <i class="bx bx-phone"></i>
-
-          <span class="num">+92 318 1011811</span>
-        </a>
-      </div>
+   <!-- search-Modal -->
+   <div class="search-modal" id="modal">
+    <div class="modal2-content">
+      <span id="close-modal" class="close-modal">&times;</span>
+      <h2 class="text">Search our site</h2>
+      <input id="filterinput" type="text" class="">
+      <div id="search-items"></div>
     </div>
-
-    <div class="footer-sidebar footer-2">
-      <div id="nav_menu-2">
-        <h4 class="widget-title">FruitSabzi</h4>
-        <a href="">Term & Conditions</a>
-
-        <input type="email" name="EMAIL" class="Search" placeholder="Email Address" required="">
-        <input type="submit" class="submit" value="Subscribe">
-      </div>
-      <div class="social">
-        <a href=""><i class='bx bxl-facebook'> </i></a>
-        <a href=""><i class='bx bxl-twitter'> </i></a>
-        <a href=""><i class='bx bxl-instagram'> </i></a>
-        <a href=""><i class='bx bxl-youtube'> </i></a>
-        <a href=""><i class='bx bxl-linkedin'> </i></a>
-      </div>
-
-
-    </div>
-    <div class="footer-sidebar footer-3">
-      <div id="nav_menu-3">
-        <h4 class="widget-title">Reach Us</h4>
-        <a href="about.html">About Us</a>
-        <a href="contect.html">Contact</a>
-
-      </div>
-    </div>
-
-
-
-
-  </div>
   </div>
 
-
-  <div class="copyright">
-    <p>Copy-Right 2024 Dry-Fruit</p>
+<!-- Heart Modal -->
+<div id="heart-modal" class="modal">
+  <div class="modal-content">
+    <span class="close" id="close-heart-modal">&times;</span>
+    <h2 style="font-family: emoji;">Your Liked Items</h2>
+    <div id="heart-items"></div>
   </div>
+</div>
+
+
+
+  
    <script src="website.js"></script>
 </body>
 
