add some css in  carousel

--- a/website.html
+++ b/website.html
@@ -46,7 +46,7 @@
 <!-- carousel -->
 <div class="carousel">
   <div class="list">
-    <div class="items">
+    <div class="item">
       <img src="ip.png" alt="">
       <div class="intro">
         <div class="title">
@@ -98,8 +98,8 @@
         </div>
       </div>
     </div>
-    <div class="items">
-      <img src="ip.png" alt="">
+    <div class="item">
+      <img src="bgHead.png" alt="">
       <div class="intro">
         <div class="title">
          DesignIPhone 
@@ -150,8 +150,8 @@
         </div>
       </div>
     </div>
-    <div class="items">
-      <img src="ip.png" alt="">
+    <div class="item">
+      <img src="bgiphs.png" alt="">
       <div class="intro">
         <div class="title">
          DesignIPhone 
@@ -202,8 +202,8 @@
         </div>
       </div>
     </div>
-    <div class="items">
-      <img src="ip.png" alt="">
+    <div class="item"> 
+      <img src="bglap.png" alt="">
       <div class="intro">
         <div class="title">
          DesignIPhone 
@@ -254,8 +254,8 @@
         </div>
       </div>
     </div>
-    <div class="items">
-      <img src="ip.png" alt="">
+    <div class="item">
+      <img src="bgtab.png" alt="">
       <div class="intro">
         <div class="title">
          DesignIPhone 
@@ -306,8 +306,8 @@
         </div>
       </div>
     </div>
-    <div class="items">
-      <img src="ip.png" alt="">
+    <div class="item">
+      <img src="bgTv.png" alt="">
       <div class="intro">
         <div class="title">
          DesignIPhone 
@@ -358,6 +358,11 @@
         </div>
       </div>
     </div>
+  </div>
+  <div class="arrows">
+    <button id="prev"><</button>
+    <button id="back">Go Back</button>
+    <button id="next">></button>
   </div>
 </div>
 
