--- a/website.html
+++ b/website.html
@@ -47,314 +47,181 @@
 <div class="carousel">
   <div class="list">
     <div class="item">
-      <img src="ip.png" alt="">
+      <img src="ip.png" alt="iPhone">
       <div class="intro">
-        <div class="title">
-         DesignIPhone 
-        </div>
-        <div class="topic">
-          Phone
-        </div>
-        <div class="des">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque itaque laudantium molestiae?
-        </div>
-        <button class="searchMore">
-          see more
-        </button>
-        <div class="speclfication"></div>
+        <div class="title">Design iPhone</div>
+        <div class="topic">Phone</div>
+        <div class="des">Experience the latest technology with the new iPhone. Perfect for daily use.</div>
+        <button class="searchMore">See more</button>
+        <div class="specification"></div>
       </div>
       <div class="detail">
-        <div class="tital">
-          IPHON
-        </div>
-        <div class="des">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint libero odit.
-        </div>
-        <div class="spacifaction">
+        <div class="title">iPhone</div>
+        <div class="des">Experience the latest technology with the new iPhone. Perfect for daily use.</div>
+        <div class="specification">
           <div>
             <p>Used Time</p>
             <p>6 hrs</p>
           </div>
           <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
+            <p>Charging Port</p>
+            <p>Type-C</p>
           </div>
         </div>
         <div class="checkout">
           <button>Add to cart</button>
-          <button>checkout</button>
+          <button>Checkout</button>
+          <div class="price">$999</div>
         </div>
       </div>
     </div>
+
     <div class="item">
-      <img src="bgHead.png" alt="">
+      <img src="bgHead.png" alt="Headphones">
       <div class="intro">
-        <div class="title">
-         DesignIPhone 
-        </div>
-        <div class="topic">
-          Phone
-        </div>
-        <div class="des">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque itaque laudantium molestiae?
-        </div>
-        <button class="searchMore">
-          see more
-        </button>
-        <div class="speclfication"></div>
+        <div class="title">Design Headphones</div>
+        <div class="topic">Audio</div>
+        <div class="des">Immerse yourself in high-quality sound with our latest headphones.</div>
+        <button class="searchMore">See more</button>
+        <div class="specification"></div>
       </div>
       <div class="detail">
-        <div class="tital">
-          IPHON
-        </div>
-        <div class="des">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint libero odit.
-        </div>
-        <div class="spacifaction">
+        <div class="title">Headphones</div>
+        <div class="des">Immerse yourself in high-quality sound with our latest headphones.</div>
+        <div class="specification">
           <div>
-            <p>Used Time</p>
-            <p>6 hrs</p>
+            <p>Battery Life</p>
+            <p>20 hrs</p>
           </div>
           <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
+            <p>Connection</p>
+            <p>Bluetooth</p>
           </div>
         </div>
         <div class="checkout">
           <button>Add to cart</button>
-          <button>checkout</button>
+          <button>Checkout</button>
+          <div class="price">$199</div>
         </div>
       </div>
     </div>
+
     <div class="item">
-      <img src="bgiphs.png" alt="">
+      <img src="bgiphs.png" alt="iPhone">
       <div class="intro">
-        <div class="title">
-         DesignIPhone 
-        </div>
-        <div class="topic">
-          Phone
-        </div>
-        <div class="des">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque itaque laudantium molestiae?
-        </div>
-        <button class="searchMore">
-          see more
-        </button>
-        <div class="speclfication"></div>
+        <div class="title">Design iPhone</div>
+        <div class="topic">Phone</div>
+        <div class="des">Discover the next generation iPhone with cutting-edge features.</div>
+        <button class="searchMore">See more</button>
+        <div class="specification"></div>
       </div>
       <div class="detail">
-        <div class="tital">
-          IPHON
-        </div>
-        <div class="des">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint libero odit.
-        </div>
-        <div class="spacifaction">
+        <div class="title">iPhone</div>
+        <div class="des">Discover the next generation iPhone with cutting-edge features.</div>
+        <div class="specification">
           <div>
             <p>Used Time</p>
-            <p>6 hrs</p>
+            <p>8 hrs</p>
           </div>
           <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
+            <p>Charging Port</p>
+            <p>Type-C</p>
           </div>
         </div>
         <div class="checkout">
           <button>Add to cart</button>
-          <button>checkout</button>
+          <button>Checkout</button>
+          <div class="price">$1099</div>
         </div>
       </div>
     </div>
-    <div class="item"> 
-      <img src="bglap.png" alt="">
-      <div class="intro">
-        <div class="title">
-         DesignIPhone 
-        </div>
-        <div class="topic">
-          Phone
-        </div>
-        <div class="des">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque itaque laudantium molestiae?
-        </div>
-        <button class="searchMore">
-          see more
-        </button>
-        <div class="speclfication"></div>
-      </div>
-      <div class="detail">
-        <div class="tital">
-          IPHON
-        </div>
-        <div class="des">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint libero odit.
-        </div>
-        <div class="spacifaction">
-          <div>
-            <p>Used Time</p>
-            <p>6 hrs</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-        </div>
-        <div class="checkout">
-          <button>Add to cart</button>
-          <button>checkout</button>
-        </div>
-      </div>
-    </div>
+
     <div class="item">
-      <img src="bgtab.png" alt="">
+      <img src="bglap.png" alt="Laptop">
       <div class="intro">
-        <div class="title">
-         DesignIPhone 
-        </div>
-        <div class="topic">
-          Phone
-        </div>
-        <div class="des">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque itaque laudantium molestiae?
-        </div>
-        <button class="searchMore">
-          see more
-        </button>
-        <div class="speclfication"></div>
+        <div class="title">Design Laptop</div>
+        <div class="topic">Laptop</div>
+        <div class="des">High performance laptop for all your computing needs.</div>
+        <button class="searchMore">See more</button>
+        <div class="specification"></div>
       </div>
       <div class="detail">
-        <div class="tital">
-          IPHON
-        </div>
-        <div class="des">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint libero odit.
-        </div>
-        <div class="spacifaction">
+        <div class="title">Laptop</div>
+        <div class="des">High performance laptop for all your computing needs.</div>
+        <div class="specification">
           <div>
-            <p>Used Time</p>
-            <p>6 hrs</p>
+            <p>Battery Life</p>
+            <p>10 hrs</p>
           </div>
           <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
+            <p>Charging Port</p>
+            <p>Type-C</p>
           </div>
         </div>
         <div class="checkout">
           <button>Add to cart</button>
-          <button>checkout</button>
+          <button>Checkout</button>
+          <div class="price">$1299</div>
         </div>
       </div>
     </div>
+
     <div class="item">
-      <img src="bgTv.png" alt="">
+      <img src="bgtab.png" alt="Tablet">
       <div class="intro">
-        <div class="title">
-         DesignIPhone 
-        </div>
-        <div class="topic">
-          Phone
-        </div>
-        <div class="des">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque itaque laudantium molestiae?
-        </div>
-        <button class="searchMore">
-          see more
-        </button>
-        <div class="speclfication"></div>
+        <div class="title">Design Tablet</div>
+        <div class="topic">Tablet</div>
+        <div class="des">The perfect tablet for work and play, with a sleek design.</div>
+        <button class="searchMore">See more</button>
+        <div class="specification"></div>
       </div>
       <div class="detail">
-        <div class="tital">
-          IPHON
-        </div>
-        <div class="des">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint libero odit.
-        </div>
-        <div class="spacifaction">
+        <div class="title">Tablet</div>
+        <div class="des">The perfect tablet for work and play, with a sleek design.</div>
+        <div class="specification">
           <div>
-            <p>Used Time</p>
-            <p>6 hrs</p>
+            <p>Battery Life</p>
+            <p>12 hrs</p>
           </div>
           <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
-          </div>
-          <div>
-            <p>Charging port</p>
-            <p>Type -c</p>
+            <p>Charging Port</p>
+            <p>Type-C</p>
           </div>
         </div>
         <div class="checkout">
           <button>Add to cart</button>
-          <button>checkout</button>
+          <button>Checkout</button>
+          <div class="price">$599</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="bluetooth.png" alt="Bluetooth Speaker">
+      <div class="intro">
+        <div class="title">Design Bluetooth Speaker</div>
+        <div class="topic">Audio</div>
+        <div class="des">Enjoy high-quality sound with our portable Bluetooth speaker.</div>
+        <button class="searchMore">See more</button>
+        <div class="specification"></div>
+      </div>
+      <div class="detail">
+        <div class="title">Bluetooth Speaker</div>
+        <div class="des">Enjoy high-quality sound with our portable Bluetooth speaker.</div>
+        <div class="specification">
+          <div>
+            <p>Battery Life</p>
+            <p>15 hrs</p>
+          </div>
+          <div>
+            <p>Connection</p>
+            <p>Bluetooth 5.0</p>
+          </div>
+        </div>
+        <div class="checkout">
+          <button>Add to cart</button>
+          <button>Checkout</button>
+          <div class="price">$149</div>
         </div>
       </div>
     </div>
@@ -367,7 +234,10 @@
 </div>
 
 
+
+
    <!-- Product List -->
+   <div class="product-heading"><h1>Products</h1></div>
    <div id="product-list"></div>
   
    <!-- Cart Modal  -->
@@ -401,7 +271,55 @@
 
 
 
-  
+
+
+<!-- footer -->
+<footer class="footer">
+  <div class="footer-container">
+    <div class="footer-section">
+      <h3>About Us</h3>
+      <p>Welcome to ElectronicZone, your one-stop shop for the latest electronics, including laptops, smartphones, computers, and watches. Explore our wide range of products and enjoy shopping with us!</p>
+    </div>
+    <div class="footer-section">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </div>
+    <div class="footer-section">
+      <h3>Contact Us</h3>
+      <p>Email: support@electroniczone.com</p>
+      <p>Phone: +123-456-7890</p>
+    </div>
+    <div class="footer-section">
+      <h3>Follow Us</h3>
+      <div class="social">
+        <a href=""><i class='bx bxl-facebook'> </i></a>
+        <a href=""><i class='bx bxl-twitter'> </i></a>
+        <a href=""><i class='bx bxl-instagram'> </i></a>
+        <a href=""><i class='bx bxl-youtube'> </i></a>
+        <a href=""><i class='bx bxl-linkedin'> </i></a>
+      </div>
+    </div>
+    <div class="footer-section newsletter">
+      <h3>Newsletter</h3>
+      <p>Sign up for our newsletter to stay updated on the latest news and special offers.</p>
+      <form action="#">
+        <input type="email" placeholder="Enter your email" required>
+        <button type="submit">Subscribe</button>
+      </form>
+    </div>
+  </div>
+</footer>
+<!-- FontAwesome Script for Social Icons -->
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<div class="copyright">
+  <p>Copy-Right 2024 Dry-Fruit</p>
+</div>
+
    <script src="website.js"></script>
 </body>
 
