--- a/website.html
+++ b/website.html
@@ -235,6 +235,20 @@
 
 
 
+<div class="popular-categories">
+  <h1>Popular Categories</h1>
+  <div id="categoryListWrapper">
+    <div id="categoryList">
+      <!-- Categories will be populated here -->
+    </div>
+  </div>
+  <div class="carousel-controls">
+    <button id="prevCategoryBtn"><</button>
+    <button id="nextCategoryBtn">></button>
+  </div>
+</div>
+
+
 
    <!-- Product List -->
    <div class="product-heading"><h1>Products</h1></div>
